# Orbital-Collision-Risk-Dashboard

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  SECURITY.md  docker-compose.yml
.github/: dependabot.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260501_0000_initial_schema.py  20260501_0100_alert_subscriptions.py
backend/src/oc/: __init__.py  config.py  db.py  main.py  models.py  schemas.py
backend/src/oc/api/: __init__.py  conjunctions.py  health.py  satellites.py  stats.py
backend/src/oc/application/: __init__.py  ports.py
backend/src/oc/application/use_cases/: __init__.py  alerts.py  compute_conjunctions.py  compute_heatmap.py  refresh_tles.py
backend/src/oc/domain/: __init__.py  entities.py  value_objects.py
backend/src/oc/infrastructure/: __init__.py  notifications.py  scheduler.py
backend/src/oc/infrastructure/http/: __init__.py  alerts.py  api.py  calendar.py  conjunctions.py  health.py  heatmap.py  satellites.py  stats.py
backend/src/oc/infrastructure/numerics/: __init__.py  scipy_minimizer.py
backend/src/oc/infrastructure/persistence/: __init__.py  alert_subscription_repository.py  heatmap_repository.py  models.py  satellite_repository.py  tle_repository.py
backend/src/oc/infrastructure/propagation/: __init__.py  geodetic.py  sgp4_propagator.py
backend/src/oc/infrastructure/tle_sources/: __init__.py  celestrak.py
backend/src/oc/interface/: __init__.py  schemas.py
backend/src/oc/services/: __init__.py  conjunctions.py  propagation.py  tle_fetcher.py
backend/src/oc/workers/: __init__.py  scheduler.py
backend/tests/: conftest.py  test_alerts.py  test_api.py  test_conjunctions.py  test_geodetic.py  test_heatmap.py  test_propagation.py  test_satellites_api.py  test_tle_fetcher.py
docs/: alerts.md  api-contract.md  architecture.md  contributing.md  data-sources.md
frontend/: .dockerignore  .gitignore  .prettierignore  .prettierrc  Dockerfile  README.md  env.d.ts  eslint.config.js  index.html  nginx.conf  (+8 more)
(+61 files in other folders)
