[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orbital-conjunctions-backend"
version = "0.1.0"
description = "Backend service for the Orbital Conjunctions Dashboard."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Orbital Conjunctions Team" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "aiosqlite>=0.20",
    "greenlet>=3.0",
    "sgp4>=2.23",
    "httpx>=0.27",
    "apscheduler>=3.10",
    "structlog>=24.1",
    "scipy>=1.13",
    "numpy>=1.26",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-python-dateutil",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"oc" = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "N",
    "SIM",
    "RUF",
    "ASYNC",
    "C4",
]
ignore = [
    "B008",  # FastAPI uses Depends() in argument defaults.
    "N805",  # SQLAlchemy mapped_column declarations.
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
plugins = []
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = [
    "sgp4.*",
    "apscheduler.*",
    "scipy.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"
filterwarnings = [
    "ignore::DeprecationWarning",
]
